# galyarder-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  IMPROVEMENTS_SUMMARY.md  OG_IMAGE_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  deploy.sh  mkdocs.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
app/: globals.css
backend/g-agent/: README.md  SECURITY.md  pyproject.toml
backend/g-agent/bridge/src/: whatsapp.ts
backend/g-agent/g_agent/agent/: context.py
backend/g-agent/g_agent/agent/tools/: cron.py  message.py  shell.py  spawn.py
backend/g-agent/g_agent/bus/: __init__.py  queue.py
backend/g-agent/g_agent/channels/: __init__.py  base.py  feishu.py  telegram.py
backend/g-agent/g_agent/cli/: commands.py
backend/g-agent/g_agent/config/: loader.py
backend/g-agent/g_agent/cron/: __init__.py  service.py
backend/g-agent/g_agent/providers/: litellm_provider.py
backend/g-agent/g_agent/session/: __init__.py
backend/g-agent/g_agent/skills/tmux/: SKILL.md
backend/g-agent/g_agent/skills/tmux/scripts/: find-sessions.sh
backend/g-agent/g_agent/utils/: helpers.py
backend/g-agent/tests/: test_docker.sh  test_tool_validation.py
backend/g-agent/workspace/: SOUL.md  USER.md
components/: Comparison.tsx  FAQ.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Integrations.tsx  Section.tsx  SolutionBlock.tsx  WaitlistForm.tsx
deploy/: install-local-guard.sh  optimize-images.sh
docs/: branding-domain.md  channels.md  clawraref.md  cli-commands.md  cli-error-style.md  configuration.md  contributing.md  embedding.md  faq.md  getting-started.md  index.md  install-matrix.md  migration-from-landingpages.md  operations.md  plugins.md  (+2 more)
(+166 files in other folders)
